# PROYECTO-CS-25B

./: .gitignore  CMakeLists.txt  manage.py
accounts/: urls.py  views.py
accounts/static/accounts/: style.css
herracom/: asgi.py  settings.py  urls.py  wsgi.py
templates/accounts/: home.html  login.html
